deleted all bookmark reference in UserServiceImpl test + userController test